2004/05/21 Matthew Zimmerman <zubov@users.sourceforge.net>
* Fixed Bad Sequence of Commands bug in 1.1
* Fixed "SITE NEW"

2004/05/17 Morgan Christiansson <drftpd@mog.se>
* Added IDNT support with accompanying LoginTest JUnit tetscase.
* Removed use.ident support, ident protocol is used if it is significant in users hostmasks.

2004/05/16 Matthew Zimmerman <zubov@users.sourceforge.net>
* Refactored ArchiveType(s) to accept multiple destination slaves
* There are four ArchiveType(s) now available, MoveReleaseToMostFreeSlaves
  MoveReleaseToSpecificSlaves, FinishReleaseOnSlaves, and StripeFilesOffSpecificSlave
* Settings in archive.conf have changed

2004/05/11 Morgan Christiansson <drftpd@mog.se>
* Began adding MAX_PATH checking so that PATH_MAX which is 256 on win32 isn't exceeded.
* Made SITE SLAVES plain available to non-siteops, SITE SLAVES now takes 2 arguments:
  SITE SLAVES [rmi] [plain]
* Found and fixed a slave synchronization error when an upload failed.
* Fixed error checking on mkdirs().

2004/04/26 Morgan Christiansson <drftpd@mog.se>
* Added userrejectsecure, userrejectinsecure, denydiruncrypted
  and denydatauncrypted that behave the same was as in glftpd to perms.conf.
  Initial patch by mutiger.
* Fixed trial log appender in log4j-default.conf.

2004/04/26 Matthew Zimmerman <zubov@users.sourceforge.net>
* Fixed SlaveTransfer so that the destination slave would get added to 
  the file's slave list when not using CRC checking
* Added Section support for ArchiveType's

2004/04/26 Morgan Christiansson <drftpd@mog.se>
* Implemented reason dir in nuked directory after a lot whining.
  Creates a directory in the filelist, should problably be changed
  to ListUtils at some point.

2004/04/25 Morgan Christiansson <drftpd@mog.se>
* Fixed getPlugin() so that it uses instanceof, was giving problems
  TrialSitebot and SiteBotSSL
  Thanks to mutiger for the report.

2004/04/23 Morgan Christiansson <drftpd@mog.se>