@@ -16,20 +16,25 @@ cycleTime=30
 # if numOfSlaves is not set for section, it defaults at 1 this only
 # applies to MoveReleaseToMostFreeSlaves and FinishReleaseOnSlaves
 
-#section1.archiveType=MoveReleaseToMostFreeSlaves
-#section1.numOfSlaves=1
-#section2.archiveType=FinishReleaseOnSlaves
-#section2.numOfSlaves=1
-#section3.archiveType=MoveReleaseToSpecificSlaves
-#section3.slavename.1=destslave1
-#section3.slavename.2=destslave2
-#section3.archiveAfter=43200
-#section4.archiveType=StripeFilesOffSpecificSlaves
-#section4.offOfSlave.1=sourceslave1
-#section4.offOfSlave.2=sourceslave2
-#section4.numOfSlaves=2
-#section4.slavename.1=destslave1
-#section4.slavename.2=destslave2
+#firstsectionname.archiveType=MoveReleaseToMostFreeSlaves
+#firstsectionname.numOfSlaves=1
+#secondsectionname.archiveType=FinishReleaseOnSlaves
+#secondsectionname.numOfSlaves=1
+#thirdsectionname.archiveType=MoveReleaseToSpecificSlaves
+#thirdsectionname.slavename.1=destslave1
+#thirdsectionname.slavename.2=destslave2
+#thirdsectionname.archiveAfter=43200
+#fourthsectionname.archiveType=StripeFilesOffSpecificSlaves
+#fourthsectionname.offOfSlave.1=sourceslave1
+#fourthsectionname.offOfSlave.2=sourceslave2
+#fourthsectionname.numOfSlaves=2
+#fourthsectionname.slavename.1=destslave1
+#fourthsectionname.slavename.2=destslave2
+#fifthsectionname.archiveType=MoveReleaseOffSlavesToMostFreeSlaves
+#fifthsectionname.numOfSlaves=2
+#fifthsectionname.offOfSlave.1=slave1
+#fifthsectionname.offOfSlave.2=slave2
+
 # If section.archiveType is not defined for a section the default
 # will be used, the same holds true for section.archiveAfter
 
